# halbench

./: .gitignore  LICENSE  README.md  v2.3_drop_list.json
corpus/: CANARY.md  anchor_library.json  calibration_endpoints.json  cross_author_paragraph_anchors.json
corpus/items/: A1_GC__synth_0001.json  A1_GC__synth_0002.json  A1_GC__synth_0004.json  A1_GC__synth_0005.json  A1_GC__synth_0006.json  A1_GC__synth_0007.json  A1_GC__synth_0008.json  A1_GC__synth_0009.json  A1_GC__synth_0010.json  A1_GC__synth_0011.json  A1_GC__synth_0012.json  A1_GC__synth_0013.json  A1_GC__synth_0014.json  A1_GC__synth_0015.json  A1_GC__synth_0016.json  A1_GC__synth_0017.json  A1_GC__synth_0018.json  A1_GC__synth_0019.json  A1_GC__synth_0020.json  A1_GC__synth_0021.json  A1_GC__synth_0022.json  A1_GC__synth_0023.json  A1_GC__synth_0024.json  A1_GC__synth_0025.json  A1_GC__synth_0026.json  A1_GC__synth_0027.json  A1_GC__synth_0028.json  A1_GC__synth_0029.json  A1_GC__synth_0030.json  A1_GC__synth_0031.json  A1_GC__synth_0032.json  A1_GC__synth_0033.json  A1_GC__synth_0034.json  A1_GC__synth_0035.json  A1_GC__synth_0036.json  A1_GC__synth_0037.json  A1_GC__synth_0038.json  (+3109 more)
halbench-pkg/: .gitignore  DEPLOY.md  README.md  pyproject.toml
halbench-pkg/.github/workflows/: tests.yml  verify-submission.yml
halbench-pkg/leaderboard/: README.md
halbench-pkg/src/halbench/: __init__.py  __main__.py  cli.py  corpus.py  embedder.py  runner.py  scoring.py  verify.py
halbench-pkg/src/halbench/backends/: __init__.py  base.py  openrouter.py
halbench-pkg/tests/: test_cli.py  test_scoring.py
space/: DEPLOY.md  README.md  app.py  methodology_v2.2.md  prepare_space_data.py  requirements.txt  style.css
(+54 files in other folders)
